# auv

./: .alintcache  .gitignore  .gitmodules  .prototools  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  agent.md  alint.config.mjs  alint.config.ts  cspell.config.yaml  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  qodana.yaml  rustfmt.toml
crates/auv-api-proto/: Cargo.toml  build.rs
crates/auv-api-proto/src/: lib.rs
crates/auv-apple-music/: Cargo.toml
crates/auv-apple-music/src/: app.rs  cli.rs  lib.rs
crates/auv-apple-notes/: Cargo.toml
crates/auv-apple-notes/src/: cli.rs  driver.rs  lib.rs
crates/auv-cli/: Cargo.toml
crates/auv-cli-invoke/: Cargo.toml
crates/auv-cli-invoke/src/: arg.rs  artifact.rs  command.rs  help.rs  lib.rs  model.rs  recorded.rs  registry.rs  render.rs  summary.rs
crates/auv-cli-invoke/tests/: invoke_command_macro.rs
crates/auv-cli/examples/: mc19_query_wired_live_action.rs
crates/auv-cli/src/: cli.rs  cli_frontend.rs  invoke.rs  lib.rs  mcp.rs  projection.rs  registry.rs
crates/auv-cli/tests/: donor_cli_migration.rs  legacy_recording_boundary.rs  run_recording_frontends.rs  session_api_subprocess_smoke.rs  textedit_document_write_parity.rs
crates/auv-driver/: Cargo.toml
crates/auv-driver-common/: Cargo.toml
crates/auv-driver-common/src/: capture.rs  display.rs  error.rs  geometry.rs  input.rs  lib.rs  operation.rs  permission.rs  readiness.rs  vision.rs
crates/auv-driver-linux/: Cargo.toml  README.md
crates/auv-driver-linux/examples/: validate.rs
crates/auv-driver-linux/src/: accessibility.rs  atspi.rs  atspi_stub.rs  capture.rs  clipboard.rs  descriptor.rs  driver.rs  error.rs  input.rs  lib.rs  native.rs  ocr.rs  permission.rs  session.rs  vision.rs  window.rs
crates/auv-driver-macos/: Cargo.toml  build.rs
crates/auv-driver-macos/examples/: ax_dump.rs  ax_enable.rs  ax_enable_capture.rs  netease_ax_sidebar_enum.rs
crates/auv-driver-macos/src/: accessibility.rs  application.rs  capture.rs  constants.rs  descriptor.rs  driver.rs  lib.rs  native.rs  observe.rs  readiness.rs  session.rs  support.rs  types.rs
crates/auv-driver-windows/: Cargo.toml
crates/auv-driver-windows/examples/: validate.rs
crates/auv-driver-windows/src/: accessibility.rs  capture.rs  clipboard.rs  descriptor.rs  driver.rs  error.rs  input.rs  lib.rs  mutation.rs  ocr.rs  permission.rs  session.rs  vision.rs  window.rs
crates/auv-driver/src/: capture.rs  display.rs  error.rs  geometry.rs  input.rs  lib.rs  operation.rs  permission.rs  selector.rs  traits.rs  vision.rs  window.rs
crates/auv-file/: Cargo.toml
crates/auv-file/src/: lib.rs
crates/auv-game-balatro/: Cargo.toml  README.md
crates/auv-game-balatro/examples/: card_corner_smoke.rs
crates/auv-game-balatro/src/: artifact_roles.rs  cache.rs  card_corner.rs  card_detection_eval_witness.rs  card_detection_producer.rs  card_detection_quality.rs  card_detection_semantic.rs  card_detection_spatial_query.rs  cli.rs  config.rs  detector.rs  lib.rs  model.rs  observation.rs  operation.rs  output.rs  run_read.rs
crates/auv-game-balatro/tests/: cli.rs  real_balatro.rs  tracing_contract.rs
crates/auv-game-minecraft/: Cargo.toml
crates/auv-game-minecraft/src/: artifact.rs  artifact_roles.rs  bind.rs  closed_scene_toy_fixture.rs  dataset.rs  evidence.rs  ingest.rs  input_target.rs  lib.rs  measurement.rs  overlay.rs  prep.rs  projection.rs  projection_record.rs  run_read.rs  sample_builder.rs  scene_packet.rs  session_observation.rs  training_job.rs  training_launch.rs  training_package.rs  training_result.rs  training_result_artifact.rs  training_result_holdout_preview.rs  training_result_holdout_render_quality.rs  training_result_semantic.rs  training_result_spatial_query.rs  training_result_spatial_query_action.rs  training_result_spatial_query_action_wiring.rs  training_result_spatial_query_provider.rs  types.rs  verify.rs
crates/auv-game-minecraft/tests/: tracing_contract.rs  training_result_holdout.rs
crates/auv-game-osu/: Cargo.toml
crates/auv-game-osu/src/: artifact_roles.rs  benchmark.rs  dataset.rs  detection_eval_quality.rs  detection_eval_witness.rs  lib.rs  projection.rs  run_read.rs  visual_eval.rs  visual_truth.rs  visual_truth_semantic.rs  visual_truth_spatial_query.rs  visual_truth_spatial_query_action.rs  visual_truth_spatial_query_action_wiring.rs
crates/auv-game-osu/tests/: detection_eval.rs  detection_eval_witness_quality.rs  tracing_contract.rs
crates/auv-gnome-control-center/: Cargo.toml
crates/auv-gnome-control-center/src/: app.rs  cli.rs  interaction.rs  lib.rs  output.rs  views.rs  windows.rs
crates/auv-godot/: Cargo.toml
crates/auv-godot/src/: lib.rs
crates/auv-inference-ort/: Cargo.toml
crates/auv-inference-ort/src/: lib.rs
crates/auv-inference-ultralytics/: Cargo.toml
crates/auv-inference-ultralytics/examples/: detect.rs
crates/auv-inference-ultralytics/src/: convert.rs  detector.rs  device.rs  lib.rs
crates/auv-inference-ultralytics/tests/: detection_set_boundary.rs  fixture_parity.rs  slay_the_spire_observe_only_boundary.rs
crates/auv-inference-yolo/: Cargo.toml
crates/auv-inference-yolo/examples/: detect.rs
crates/auv-inference-yolo/src/: decode.rs  detector.rs  error.rs  letterbox.rs  lib.rs  nms.rs  render.rs  types.rs
crates/auv-inference-yolo/tests/: fixture_parity.rs
crates/auv-inspect-model/: Cargo.toml
crates/auv-inspect-model/src/: legacy.rs  lib.rs
crates/auv-inspect-server/: Cargo.toml
crates/auv-inspect-server/src/: artifact_api.rs  inspect_server_viewer.html  legacy.rs  lib.rs  read_projection.rs  run_api.rs  server.rs  session.rs  viewer_assets.rs
crates/auv-inspect-server/tests/: artifact_api_contract.rs  run_api_contract.rs  viewer_projection_contract.rs
crates/auv-media-macos/: Cargo.toml  build.rs
crates/auv-netease-music/: Cargo.toml
crates/auv-overlay-macos/: Cargo.toml  build.rs
crates/auv-product/: Cargo.toml
crates/auv-product/src/: cli.rs  (+5 more)
crates/auv-qqmusic/: Cargo.toml
crates/auv-run/: Cargo.toml
crates/auv-scan/: Cargo.toml
crates/auv-steam/: Cargo.toml
(+1299 files in other folders)
