[workspace]
members = [
  ".",
  "crates/auv-driver",
  "crates/auv-driver-macos",
  "crates/auv-inference-common",
  "crates/auv-inference-ultralytics",
  "crates/auv-media-macos",
  "crates/auv-netease-music",
  "crates/auv-overlay-macos",
  "crates/auv-view",
]

[workspace.package]
version = "0.0.1"
authors = [ "Moeru AI" ]
edition = "2024"
rust-version = "1.91"
description = ""
documentation = "https://github.com/moeru-ai/auv"
readme = "README.md"
homepage = "https://github.com/moeru-ai/auv"
repository = "https://github.com/moeru-ai/auv"
license = ""
publish = false

[package]
name = "auv-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
ndarray = "0.17"
ultralytics-inference = { version = "0.0.18", default-features = false }
xcap = "0.6"
swift-bridge = "0.1.59"
swift-bridge-build = "0.1.59"
objc2-core-graphics = { version = "0.3", features = ["CGWindow", "CGImage", "CGDataProvider", "CGGeometry"] }
objc2-core-foundation = "0.3"

[dependencies]
auv-driver = { path = "crates/auv-driver" }
axum = { version = "0.8", features = ["ws"] }
semver = "1"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "sync"] }
xcap.workspace = true
image.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
auv-driver-macos = { path = "crates/auv-driver-macos" }
auv-overlay-macos = { path = "crates/auv-overlay-macos" }
objc2-core-graphics.workspace = true
objc2-core-foundation.workspace = true
swift-bridge-build.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
