[workspace]
members = [
  ".",
  "crates/auv-apple-music",
  "crates/auv-apple-notes",
  "crates/auv-apple-textedit",
  "crates/auv-api-proto",
  "crates/auv-cli-invoke-macros",
  "crates/auv-cli-invoke",
  "crates/auv-compare",
  "crates/auv-file",
  "crates/auv-godot",
  "crates/auv-inspect-server",
  "crates/auv-inspect-model",
  "crates/auv-cli",
  "crates/auv-query-readiness",
  "crates/auv-tracing",
  "crates/auv-tracing-conformance",
  "crates/auv-tracing-inspect",
  "crates/auv-tracing-otel",
  "crates/auv-scan",
  "crates/auv-stage-status",
  "crates/auv-qqmusic",
  "crates/auv-driver",
  "crates/auv-driver-common",
  "crates/auv-driver-linux",
  "crates/auv-driver-macos",
  "crates/auv-driver-windows",
  "crates/auv-game-balatro",
  "crates/auv-game-minecraft",
  "crates/auv-game-osu",
  "crates/auv-gnome-control-center",
  "crates/auv-inference-common",
  "crates/auv-inference-ort",
  "crates/auv-inference-ultralytics",
  "crates/auv-task-object-detection",
  "crates/auv-media-macos",
  "crates/auv-netease-music",
  "crates/auv-overlay-macos",
  "crates/auv-steam",
  "crates/auv-view",
]
default-members = [".", "crates/auv-cli"]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = [ "Moeru AI" ]
edition = "2024"
rust-version = "1.91"
description = ""
documentation = "https://github.com/moeru-ai/auv"
readme = "README.md"
homepage = "https://github.com/moeru-ai/auv"
repository = "https://github.com/moeru-ai/auv"
license = ""
publish = false

[package]
name = "auv-runtime"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
autobins = false

[workspace.dependencies]
bytes = "1"
fs2 = "0.4"
futures-core = "0.3"
futures-io = "0.3"
futures-util = "0.3"
hex = "0.4"
mime = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tempfile = "3"
time = { version = "0.3", features = ["formatting", "parsing"] }
tungstenite = "0.29"
uuid = { version = "1", features = ["serde", "v7"] }
image = { version = "0.25", default-features = false, features = ["png"] }
leptess = "0.14"
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", default-features = false }
ultralytics-inference = { version = "0.0.18", default-features = false }
xcap = "0.6"
swift-bridge = "0.1.59"
swift-bridge-build = "0.1.59"
windows = { version = "0.58", features = ["Foundation", "Foundation_Collections", "Media_Ocr", "Graphics_Imaging", "Security_Cryptography", "Globalization", "Storage_Streams", "Win32_Foundation", "Win32_Security", "Win32_UI_Accessibility", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_Storage_Xps", "Win32_System_Com", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_System_RemoteDesktop", "Win32_System_Threading"] }
zbus = "5.15"
objc2-core-graphics = { version = "0.3", features = ["CGWindow", "CGImage", "CGDataProvider", "CGGeometry"] }
objc2-core-foundation = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dependencies]
auv-driver = { path = "crates/auv-driver" }
auv-driver-macos = { path = "crates/auv-driver-macos" }
auv-cli-invoke = { path = "crates/auv-cli-invoke" }
auv-tracing = { path = "crates/auv-tracing", features = ["file-store"] }
auv-api-proto = { path = "crates/auv-api-proto" }
auv-inspect-server = { path = "crates/auv-inspect-server" }
auv-inspect-model = { path = "crates/auv-inspect-model" }
auv-scan = { path = "crates/auv-scan" }
auv-view = { path = "crates/auv-view" }
serde.workspace = true
thiserror.workspace = true
serde_json.workspace = true
schemars = "1.2.1"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["transport"] }
image.workspace = true
futures-util = { workspace = true, features = ["io"] }
sha2.workspace = true
rmcp = { version = "0.6", features = ["server", "client", "transport-io"] }

[target.'cfg(target_os = "macos")'.dependencies]
auv-media-macos = { path = "crates/auv-media-macos" }
objc2-core-graphics.workspace = true
objc2-core-foundation.workspace = true
swift-bridge-build.workspace = true

[dev-dependencies]
anyhow = "1"
auv-api-proto = { path = "crates/auv-api-proto" }
auv-tracing = { path = "crates/auv-tracing", features = ["file-store", "memory-store"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "time"] }
tonic = { version = "0.14", features = ["transport"] }
