[package]
name = "auv-apple-music"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "auv-apple-music"
path = "src/bin/auv-apple-music.rs"

[dependencies]
auv-driver = { path = "../auv-driver" }
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
auv-driver-windows = { path = "../auv-driver-windows" }

[target.'cfg(target_os = "macos")'.dependencies]
auv-driver-macos = { path = "../auv-driver-macos" }
