[package]
name = "auv-apple-notes"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
auv-driver = { path = "../auv-driver" }
auv-driver-macos = { path = "../auv-driver-macos" }
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
