[package]
name = "auv-cli-invoke"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
auv-cli-invoke-macros = { path = "../auv-cli-invoke-macros" }
auv-driver = { path = "../auv-driver" }

[target.'cfg(target_os = "macos")'.dependencies]
auv-driver-macos = { path = "../auv-driver-macos" }
