[package]
name = "auv-cli-invoke"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
auv-cli-invoke-macros = { path = "../auv-cli-invoke-macros" }
auv-driver = { path = "../auv-driver" }
auv-scan = { path = "../auv-scan" }
auv-tracing = { path = "../auv-tracing" }
auv-tracing-driver = { path = "../auv-tracing-driver" }
tempfile = "3"
anstream = "1"
anstyle = "1"
clap = { version = "4.5", features = ["derive"] }
comfy-table = { version = "7", default-features = false }
futures-executor = "0.3"
futures-util = { workspace = true, features = ["io"] }
image.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2.workspace = true

[dev-dependencies]
auv-tracing = { path = "../auv-tracing", features = ["memory-store"] }

[target.'cfg(target_os = "macos")'.dependencies]
auv-driver-macos = { path = "../auv-driver-macos" }
