[package]
name = "auv-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description = "AUV product CLI, app integrations, and inspect assembly"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
autobins = false
default-run = "auv"

[[bin]]
name = "auv"
path = "src/bin/auv.rs"

[[bin]]
name = "auv-godot"
path = "src/bin/auv-godot.rs"

[[bin]]
name = "auv-osu"
path = "src/bin/auv-osu.rs"

[[bin]]
name = "auv-minecraft"
path = "src/bin/auv-minecraft.rs"

[dependencies]
auv-runtime = { path = "../.." }
auv-apple-textedit = { path = "../auv-apple-textedit" }
auv-cli-invoke-macros = { path = "../auv-cli-invoke-macros" }
auv-game-osu = { path = "../auv-game-osu" }
auv-game-balatro = { path = "../auv-game-balatro" }
auv-game-minecraft = { path = "../auv-game-minecraft" }
auv-godot = { path = "../auv-godot" }
auv-task-object-detection = { path = "../auv-task-object-detection" }
auv-driver = { path = "../auv-driver" }
auv-driver-macos = { path = "../auv-driver-macos" }
auv-cli-invoke = { path = "../auv-cli-invoke" }
auv-api-proto = { path = "../auv-api-proto" }
auv-tracing-driver = { path = "../auv-tracing-driver" }
auv-tracing = { path = "../auv-tracing", features = ["file-store"] }
auv-tracing-inspect = { path = "../auv-tracing-inspect" }
auv-inspect-server = { path = "../auv-inspect-server" }
auv-inspect-model = { path = "../auv-inspect-model" }
auv-query-readiness = { path = "../auv-query-readiness" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
futures-util = { workspace = true, features = ["io"] }
futures-executor = "0.3"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "sync"] }
tonic = { version = "0.14", features = ["transport"] }
image.workspace = true
reqwest.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
auv-media-macos = { path = "../auv-media-macos" }
objc2-core-graphics.workspace = true
objc2-core-foundation.workspace = true
swift-bridge-build.workspace = true

[dev-dependencies]
auv-api-proto = { path = "../auv-api-proto" }
auv-stage-status = { path = "../auv-stage-status" }
auv-tracing = { path = "../auv-tracing", features = ["file-store", "memory-store"] }
axum = { version = "0.8", default-features = false }
rmcp = { version = "0.6", features = ["server", "client", "transport-io"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "time"] }
tonic = { version = "0.14", features = ["transport"] }
tower = { version = "0.5", features = ["util"] }
