[package]
name = "auv-driver-linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
auv-driver = { path = "../auv-driver" }
image.workspace = true
serde.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
leptess.workspace = true
xcap.workspace = true
zbus.workspace = true
