[package]
name = "auv-driver-linux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
auv-driver-common = { path = "../auv-driver-common" }
image.workspace = true
serde.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
leptess.workspace = true
pipewire = "0.8"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
zbus.workspace = true
