[package]
name = "auv-driver-windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
auv-driver-common = { path = "../auv-driver-common" }
image.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true
xcap.workspace = true
