[package]
name = "auv-driver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
auv-driver-common = { path = "../auv-driver-common" }

[target.'cfg(target_os = "linux")'.dependencies]
auv-driver-linux = { path = "../auv-driver-linux" }

[target.'cfg(target_os = "macos")'.dependencies]
auv-driver-macos = { path = "../auv-driver-macos" }

[target.'cfg(target_os = "windows")'.dependencies]
auv-driver-windows = { path = "../auv-driver-windows" }
