[package]
name = "auv-game-balatro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
card-corner-onnx = ["dep:auv-inference-ort"]

[dependencies]
auv-file = { path = "../auv-file" }
auv-stage-status = { path = "../auv-stage-status" }
auv-tracing = { path = "../auv-tracing" }
auv-driver = { path = "../auv-driver" }
auv-inference-common = { path = "../auv-inference-common" }
auv-inference-ort = { path = "../auv-inference-ort", optional = true }
auv-inference-ultralytics = { path = "../auv-inference-ultralytics" }
auv-task-object-detection = { path = "../auv-task-object-detection", features = ["ultralytics"] }
clap = { version = "4.5", features = ["derive"] }
hf-hub = { version = "1.0.0-rc.1", features = ["blocking", "rustls-tls"] }
image.workspace = true
futures-util = { workspace = true, features = ["io"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
auv-driver-macos = { path = "../auv-driver-macos" }

[dev-dependencies]
auv-tracing = { path = "../auv-tracing", features = ["memory-store"] }
futures-executor = "0.3"
tempfile = "3"
