[package]
name = "auv-game-minecraft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
auv-compare = { path = "../auv-compare" }
auv-file = { path = "../auv-file" }
auv-query-readiness = { path = "../auv-query-readiness" }
auv-driver = { path = "../auv-driver" }
auv-tracing-driver = { path = "../auv-tracing-driver" }
image.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile = "3"
