[package]
name = "auv-game-osu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
auv-driver = { path = "../auv-driver" }
auv-inference-common = { path = "../auv-inference-common" }
auv-tracing-driver = { path = "../auv-tracing-driver" }
image.workspace = true
serde.workspace = true
serde_json.workspace = true
rosu-map = "0.2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
auv-driver-macos = { path = "../auv-driver-macos" }
