[package]
name = "auv-game-osu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
auv-file = { path = "../auv-file" }
auv-query-readiness = { path = "../auv-query-readiness" }
auv-stage-status = { path = "../auv-stage-status" }
auv-driver = { path = "../auv-driver" }
auv-task-object-detection = { path = "../auv-task-object-detection" }
auv-tracing = { path = "../auv-tracing" }
futures-util = { workspace = true, features = ["io"] }
image.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
rosu-map = "0.2"

[dev-dependencies]
auv-tracing = { path = "../auv-tracing", features = ["memory-store"] }
futures-executor = "0.3"
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
auv-driver-macos = { path = "../auv-driver-macos" }
