[package]
name = "auv-gnome-control-center"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
auv-driver = { path = "../auv-driver" }
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
auv-driver-linux = { path = "../auv-driver-linux" }
