[package]
name = "auv-godot"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
auv-driver = { path = "../auv-driver" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tungstenite.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
auv-driver-windows = { path = "../auv-driver-windows" }
