[package]
name = "auv-inference-ort"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["runtime"]
# NOTICE: `runtime` links ONNX Runtime through `ort` with the same downloaded
# runtime posture currently used by the existing ORT-backed inference crates.
# Provider passthroughs are compile-time capabilities, not a validated AUV
# support matrix.
runtime = [
  "dep:ort",
  "ort/std",
  "ort/ndarray",
  "ort/download-binaries",
  "ort/tls-native",
  "ort/copy-dylibs",
  "ort/api-24",
]
cpu = ["runtime"]
coreml = ["runtime", "ort/coreml"]
cuda = ["runtime", "ort/cuda"]
directml = ["runtime", "ort/directml"]
openvino = ["runtime", "ort/openvino"]
tensorrt = ["runtime", "ort/tensorrt"]
webgpu = ["runtime", "ort/webgpu"]
xnnpack = ["runtime", "ort/xnnpack"]

[dependencies]
auv-inference-common = { path = "../auv-inference-common" }
ndarray.workspace = true
ort = { workspace = true, optional = true }
thiserror.workspace = true
