[package]
name = "auv-inference-yolo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
image = { workspace = true, features = ["jpeg"] }
ndarray.workspace = true
ort.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
