[package]
name = "auv-inspect-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description = "Neutral inspect composition contract (InspectSection / InspectDocument / InspectComposer)"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
auv-tracing-driver = { path = "../auv-tracing-driver" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
