[package]
name = "auv-inspect-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description = "Disposable Inspect viewer DTOs derived from canonical run snapshots"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
auv-tracing = { path = "../auv-tracing" }
serde.workspace = true
serde_json.workspace = true
