[package]
name = "auv-inspect-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
auv-tracing-driver = { path = "../auv-tracing-driver" }
auv-view = { path = "../auv-view" }
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
