[package]
name = "auv-inspect-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
auv-inspect-model = { path = "../auv-inspect-model" }
auv-tracing-driver = { path = "../auv-tracing-driver" }
auv-view = { path = "../auv-view" }
axum = { version = "0.8", features = ["ws"] }
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
