[package]
name = "auv-media-macos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "auv-media-macos"
path = "src/bin/auv-media-macos.rs"

[features]
default = []
tracing = ["dep:auv-tracing"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
clap = { version = "4.5", features = ["derive"] }

[dependencies.auv-tracing]
path = "../auv-tracing"
optional = true

[dev-dependencies]
auv-tracing = { path = "../auv-tracing", features = ["memory-store"] }
futures-executor = "0.3"
