[package]
name = "auv-netease-music"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
auv-driver = { path = "../auv-driver" }
# auv-media-macos compiles on all targets (non-macOS calls return Unsupported),
# so it is a normal dependency — this lets the platform-neutral CLI reuse its
# `MediaCommand` type instead of re-declaring it.
auv-media-macos = { path = "../auv-media-macos" }
auv-view = { path = "../auv-view" }
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
image.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
auv-driver-macos = { path = "../auv-driver-macos" }
